# DSC-PROTOCOL-breakout-hackathon

./: .gitignore  README.md
apps/dsc-frontend/app/actions/: get-account-info.ts  get-collateral-balance.ts  get-collateral-tokens.ts  get-usd-value.ts
apps/dsc-frontend/components/: ai-assistant.tsx  settings-panel.tsx  transaction-confirmation.tsx
apps/dsc-frontend/services/: ai-service.ts
apps/dsc-solana/: Addresses.md  Cargo.toml  READ.md  package.json
apps/dsc-solana/programs/dsc-system/: Cargo.toml
apps/dsc-solana/programs/dsc-system/src/: lib.rs
apps/dsc-solana/tests/: dsc-system.ts
