[package]
name = "dsc-system"
version = "0.1.0"
description = "Decentralized Stablecoin System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dsc_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
pyth-sdk-solana = "0.10.2"
solana-program = "=1.18.22"